--- a/kube/LLM-AST/2-kube-pod-llm-ast.yml
+++ b/kube/LLM-AST/2-kube-pod-llm-ast.yml
@@ -1,42 +1,8 @@
 
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: shradha-llmast-gp-engine-unoselab02-pod02-new-02
-# spec:
-#   automountServiceAccountToken: false
-#   affinity:
-#     nodeAffinity:
-#       requiredDuringSchedulingIgnoredDuringExecution:
-#         nodeSelectorTerms:
-#         - matchExpressions:
-#           - key: topology.kubernetes.io/region
-#             operator: In
-#             values:
-#             - us-central
-#   containers:
-#   - name: pod-name-sso
-#     image: ubuntu:20.04
-#     command: ["sh", "-c", "echo 'Im a new pod' && sleep infinity"]
-#     resources:
-#       limits:
-#         memory: 12Gi
-#         cpu: 2
-#       requests:
-#         memory: 10Gi
-#         cpu: 2
-#     volumeMounts:
-#     - mountPath: /datamid
-#       name: data-shra-llmast-gp-engine-unoselab02a
-#   volumes:
-#     - name: data-shra-llmast-gp-engine-unoselab02a
-#       persistentVolumeClaim:
-#         claimName: pvc-shra-llmast-gp-engine-unoselab02a
-
 apiVersion: v1
 kind: Pod
 metadata:
-  name: shradha-llmast-gp-engine-unoselab02-pod02-new-01
+  name: shradha-llmast-gp-engine-unoselab02-pod02-new-02
 spec:
   automountServiceAccountToken: false
   affinity:
@@ -60,9 +26,43 @@ spec:
         memory: 10Gi
         cpu: 2
     volumeMounts:
-    - mountPath: /datasmall
-      name: data-shra-llmast-gp-engine-unoselab02
+    - mountPath: /datalargeSB
+      name: data-shra-llmast-gp-engine-unoselab02-ea
   volumes:
-    - name: data-shra-llmast-gp-engine-unoselab02
+    - name: data-shra-llmast-gp-engine-unoselab02-ea
       persistentVolumeClaim:
-        claimName: pvc-shra-llmast-gp-engine-unoselab02
+        claimName: pvc-shra-llmast-gp-engine-unoselab02-ea
+
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: shradha-llmast-gp-engine-unoselab02-pod02-new-01
+# spec:
+#   automountServiceAccountToken: false
+#   affinity:
+#     nodeAffinity:
+#       requiredDuringSchedulingIgnoredDuringExecution:
+#         nodeSelectorTerms:
+#         - matchExpressions:
+#           - key: topology.kubernetes.io/region
+#             operator: In
+#             values:
+#             - us-central
+#   containers:
+#   - name: pod-name-sso
+#     image: ubuntu:20.04
+#     command: ["sh", "-c", "echo 'Im a new pod' && sleep infinity"]
+#     resources:
+#       limits:
+#         memory: 12Gi
+#         cpu: 2
+#       requests:
+#         memory: 10Gi
+#         cpu: 2
+#     volumeMounts:
+#     - mountPath: /datalarge
+#       name: data-shra-llmast-gp-engine-unoselab02
+#   volumes:
+#     - name: data-shra-llmast-gp-engine-unoselab02
+#       persistentVolumeClaim:
+#         claimName: pvc-shra-llmast-gp-engine-unoselab02
