--- a/kube/LLM-AST/3-kube-job-llm-ast-v2.yml
+++ b/kube/LLM-AST/3-kube-job-llm-ast-v2.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job02-llmast-shradha-gp-engine-unoselab02-new-02
+  name: job08-llmast-shradha-gp-engine-unoselab02-new-02
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -9,10 +9,10 @@ spec:
       containers:
         - name: job-llmast-model-train-container
           image: gitlab-registry.nrp-nautilus.io/msong/research/env_mlm:v1
-          workingDir: /datamid
+          workingDir: /datalargeSB
           command: ["sh", "-c"]
-          args: ["cd /datamid;
-              ls -la /datamid;
+          args: ["cd /datalargeSB;
+              ls -la /datalargeSB;
               mamba create -y -n llmast_env;
               source activate llmast_env;
               pip install scikit-learn==1.3.2 transformers==4.36.2 datasets==2.16.1 sentencepiece==0.1.99 sacremoses==0.1.1 accelerate==0.25.0 torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 prettytable==3.10.0;
@@ -23,31 +23,40 @@ spec:
               pip check;
               pip install tree_sitter==0.21.0; 
               pip install antlr4-python3-runtime==4.9.2;
-              tar xf llm_ast_nongen_PR.tar.gz;
+              tar xf llm_ast_nongen_SB_test.tar.gz;
               cd deploy-spt-code/spt-code/sources;
-              python main.py --do-pre-train --pre-train-tasks cap --batch-size 96 --eval-batch-size 96 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 10 --n-epoch-pre-train 10 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"mid\""]
+              python main.py --do-pre-train --pre-train-tasks cap --batch-size 128 --eval-batch-size 128 --test-batch-size 64 --cuda-visible-devices 0,1,2,3,4,5 --fp16 --model-name pre_train --n-epoch 30 --n-epoch-pre-train 30 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"large\""]
           volumeMounts:
-            - name: pvc-shra-llmast-gp-engine-unoselab02
-              mountPath: /datamid
+            - name: pvc-shra-llmast-gp-engine-unoselab02-ea
+              mountPath: /datalargeSB
           resources:
             limits:
               memory: 32Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8
+              nvidia.com/rtxa6000: 6
               ephemeral-storage: 48Gi
             requests:
               memory: 32Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8
+              nvidia.com/rtxa6000: 6
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
             runAsUser: 0
       volumes:
-        - name: pvc-shra-llmast-gp-engine-unoselab02
+        - name: pvc-shra-llmast-gp-engine-unoselab02-ea
           persistentVolumeClaim:
-            claimName: pvc-shra-llmast-gp-engine-unoselab02
+            claimName: pvc-shra-llmast-gp-engine-unoselab02-ea
       restartPolicy: Never
+      # affinity:
+      #   nodeAffinity:
+      #     requiredDuringSchedulingIgnoredDuringExecution:
+      #       nodeSelectorTerms:
+      #         - matchExpressions:
+      #           - key: nvidia.com/gpu.product
+      #             operator: In
+      #             values:
+      #               - NVIDIA-GeForce-RTX-3090
   backoffLimit: 1
 
 
