--- a/kube/LLM-AST/3-kube-job-llm-ast.yml
+++ b/kube/LLM-AST/3-kube-job-llm-ast.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job06-llmast-shradha-gp-engine-unoselab02a
+  name: job04-llmast-shradha-gp-engine-unoselab02-rtx6000
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -9,10 +9,10 @@ spec:
       containers:
         - name: job-llmast-model-train-container
           image: gitlab-registry.nrp-nautilus.io/msong/research/env_mlm:v1
-          workingDir: /datasmall
+          workingDir: /datalarge
           command: ["sh", "-c"]
-          args: ["cd /datasmall;
-              ls -la /datasmall;
+          args: ["cd /datalarge;
+              ls -la /datalarge;
               mamba create -y -n llmast_env;
               source activate llmast_env;
               pip install scikit-learn==1.3.2 transformers==4.36.2 datasets==2.16.1 sentencepiece==0.1.99 sacremoses==0.1.1 accelerate==0.25.0 torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 prettytable==3.10.0;
@@ -23,30 +23,30 @@ spec:
               pip check;
               pip install tree_sitter==0.21.0; 
               pip install antlr4-python3-runtime==4.9.2;
-              tar xf llm_ast_nongen_PR.tar.gz;
+              tar xf llm_ast_nongen_PR_test.tar.gz;
               cd deploy-spt-code/spt-code/sources;
-              python main.py --do-pre-train --pre-train-tasks cap --batch-size 96 --eval-batch-size 96 --cuda-visible-devices 0,1,2,3,4,5,6,7 --fp16 --model-name pre_train --n-epoch 10 --n-epoch-pre-train 10 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"small\""]
+              python main.py --do-pre-train --pre-train-tasks cap --batch-size 128 --eval-batch-size 128 --test-batch-size 64 --cuda-visible-devices 0,1,2,3,4 --fp16 --model-name pre_train --n-epoch 30 --n-epoch-pre-train 30 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"large\""]
           volumeMounts:
-            - name: pvc-shra-llmast-gp-engine-unoselab02a
-              mountPath: /datasmall
+            - name: pvc-shra-llmast-gp-engine-unoselab02
+              mountPath: /datalarge
           resources:
             limits:
               memory: 48Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8 #nvidia.com/gpu: 8
+              nvidia.com/a40: 5 #nvidia.com/gpu: 8
               ephemeral-storage: 48Gi
             requests:
               memory: 48Gi
               cpu: "4"
-              nvidia.com/rtxa6000: 8 #nvidia.com/gpu: 8
+              nvidia.com/a40: 5 #nvidia.com/gpu: 8
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
             runAsUser: 0
       volumes:
-        - name: pvc-shra-llmast-gp-engine-unoselab02a
+        - name: pvc-shra-llmast-gp-engine-unoselab02
           persistentVolumeClaim:
-            claimName: pvc-shra-llmast-gp-engine-unoselab02a
+            claimName: pvc-shra-llmast-gp-engine-unoselab02
       restartPolicy: Never
       # affinity:
       #   nodeAffinity:
