--- a/kube/LLM-AST/3-kube-job-llm-ast.yml
+++ b/kube/LLM-AST/3-kube-job-llm-ast.yml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job02-llmast-shradha-gp-engine-unoselab02-a40-v1
+  name: job01-llmast-shradha-gp-engine-unoselab02-tesla
 spec:
   ttlSecondsAfterFinished: 86400 # a day
   template:
@@ -23,9 +23,9 @@ spec:
               pip check;
               pip install tree_sitter==0.21.0; 
               pip install antlr4-python3-runtime==4.9.2;
-              tar xf llm_ast_code_gen.tar.gz;
-              cd deploy-spt-code/spt-code/sources;
-              python main.py --do-pre-train --train-from-scratch --pre-train-tasks cap --batch-size 128 --eval-batch-size 128 --cuda-visible-devices 0,1,2,3,4,5 --fp16 --model-name pre_train --n-epoch 30 --n-epoch-pre-train 30 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"mid\""]
+              tar xf llm_ast_gen01_code.tar.gz;
+              cd deploy-spt-code-01/spt-code/sources;
+              python main.py --do-pre-train --train-from-scratch --pre-train-tasks cap --batch-size 128 --eval-batch-size 128 --cuda-visible-devices 0,1,2,3 --fp16 --model-name pre_train --n-epoch 30 --n-epoch-pre-train 30 --task completion --remove-existing-saved-file pre_train:fine_tune --ast-type \"jdt\" --dataset-size \"mid\""]
           volumeMounts: 
             - name: pvc-shra-llmast-gp-engine-unoselab02
               mountPath: /datamid
@@ -33,12 +33,12 @@ spec:
             limits:
               memory: 48Gi
               cpu: "4"
-              nvidia.com/a40: 6 #nvidia.com/gpu: 8
+              nvidia.com/gpu: 4 #nvidia.com/gpu: 8
               ephemeral-storage: 48Gi
             requests:
               memory: 48Gi
               cpu: "4"
-              nvidia.com/a40: 6 #nvidia.com/gpu: 8
+              nvidia.com/gpu: 4 #nvidia.com/gpu: 8
               ephemeral-storage: 48Gi
           securityContext:
             allowPrivilegeEscalation: false
@@ -48,15 +48,15 @@ spec:
           persistentVolumeClaim:
             claimName: pvc-shra-llmast-gp-engine-unoselab02
       restartPolicy: Never
-      # affinity:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #           - key: nvidia.com/gpu.product
-      #             operator: In
-      #             values:
-      #               - NVIDIA-A100-SXM4-80GB
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: nvidia.com/gpu.product
+                  operator: In
+                  values:
+                    - Tesla-V100-SXM2-32GB
   backoffLimit: 1
 
 # apiVersion: batch/v1
